feat(77): Added input and output decoration

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,6 +9,7 @@
                 <block-success />
                 <username-input />
                 <log-user-detail />
+                <app-databinding />
             </div>
         </div>
         
