--- a/src/app/previous-component/databinding/cockpit/cockpit.component.html
+++ b/src/app/previous-component/databinding/cockpit/cockpit.component.html
@@ -8,8 +8,8 @@
     <!-- <input type="text" class="form-control" [(ngModel)]="newServerContent" /> -->
     <input type="text" class="form-control" #serverContent />
     <br />
-    <button class="btn btn-primary" (click)="onAddServer(serverName.value, serverContent.value)">Add Server</button>
-    <button class="btn btn-primary" (click)="onAddBlueprint(serverName.value, serverContent.value)">
+    <button class="btn btn-primary" (click)="onAddServer(serverName.value)">Add Server</button>
+    <button class="btn btn-primary" (click)="onAddBlueprint(serverName.value)">
       Add Server Blueprint
     </button>
   </div>
