--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="container" ngbAccordion>
-    <div class="row" ngbAccordionItem>
+    <div ngbAccordionItem>
         <h1 ngbAccordionHeader>
             <button ngbAccordionButton>Previous component</button>
         </h1>
@@ -11,12 +11,31 @@
                 <log-user-detail />
                 <app-databinding />
             </div>
-        </div>
-        
+        </div>    
     </div>
-    <div class="row" ngbAccordionItem [collapsed]="false">       
+    <div ngbAccordionItem [collapsed]="true">
         <h1 ngbAccordionHeader>
-            <button ngbAccordionButton>Shopping Component</button>
+            <button ngbAccordionButton>Assignment 4</button>
+        </h1>
+        <div ngbAccordionCollapse>
+            <div ngbAccordionBody>                
+                <app-game-control (onTick)="onTick($event)"/>
+                <ul class="list-group">
+                    <li class="list-group-item" *ngFor="let number of numbers">
+                        <odd-number *ngIf="number % 2 != 0">
+                            {{number}}
+                        </odd-number> 
+                        <even-number *ngIf="number % 2 == 0"> 
+                            {{number}}
+                        </even-number>
+                    </li>                    
+                </ul>
+            </div>
+        </div>    
+    </div>
+    <div ngbAccordionItem [collapsed]="true">       
+        <h1 ngbAccordionHeader>
+            <button ngbAccordionButton>Shopping</button>
         </h1>
         <div ngbAccordionCollapse>
             <div ngbAccordionBody>
