--- a/src/app/previous-component/databinding/databinding.component.html
+++ b/src/app/previous-component/databinding/databinding.component.html
@@ -5,8 +5,17 @@
   />
   <hr />
   <div class="row">
-    <div class="col-xs-12"></div>
-    <app-server-element *ngFor="let element of serverElements"
-      [srvElement]="element"/>
+    <div class="col-xs-12">
+      <button class="btn btn-success" (click)="onChangesFirst()">Changes First Element</button>
+      <button class="btn btn-danger" (click)="onDestroyFirst()">Destroy First Element</button>
+      <app-server-element *ngFor="let element of serverElements" [srvElement]="element">      
+        <strong *ngIf="element.type === 'server'" style="color: red">
+          {{ element.content }}
+        </strong>
+        <em *ngIf="element.type === 'blueprint'">
+          {{ element.content }}
+        </em>
+      </app-server-element>
+    </div>    
   </div>
 </div>
