--- a/src/app/previous-component/databinding/server-element/server-element.component.html
+++ b/src/app/previous-component/databinding/server-element/server-element.component.html
@@ -1,13 +1,8 @@
 <div class="card">
   <div class="card-body">
-    <h5 class="card-title">{{ element.name }}</h5>
+    <h5 class="card-title" #cardTitle>{{ element.name }}</h5>
     <h6 class="card-subtitle">
-      <strong *ngIf="element.type === 'server'" style="color: red">
-        {{ element.content }}
-      </strong>
-      <em *ngIf="element.type === 'blueprint'">
-        {{ element.content }}
-      </em>
+      <ng-content/>
     </h6>
   </div>
 </div>
