feat: Added message at number component

--- a/src/app/assignment/4/even-number/even-number.component.html
+++ b/src/app/assignment/4/even-number/even-number.component.html
@@ -1,5 +1,5 @@
 <div class="ms-2 me-auto">
-    <div class="fw-bold">Even</div>    
+    <div class="fw-bold">Even Number</div>    
 </div>
 <span class="badge bg-primary rounded-pill">
     <ng-content />
