--- a/src/app/shopping/header/header.component.html
+++ b/src/app/shopping/header/header.component.html
@@ -9,10 +9,10 @@
         <div class="collapse navbar-collapse" id="navbarHeaderContent" [class.collapse]="collapsed">
             <ul class="navbar-nav me-auto">
                 <li class="nav-item">
-                    <a href="#" class="nav-link active">Recipes</a>
+                    <a href="#" class="nav-link active" (click)="goToRecipes()">Recipes</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link active">Shopping List</a>
+                    <a href="#" class="nav-link active" (click)="goToShoppingList()">Shopping List</a>
                 </li>
                 
             </ul>
