--- a/src/app/shopping/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/shopping/recipes/recipe-detail/recipe-detail.component.html
@@ -1,11 +1,11 @@
 <div class="row">
     <div class="col-sm-12">
-        <img class="img-fluid" style="max-height: 50px;">
+        <img class="img-fluid" style="max-height: 50px;" [src]="recipe.imagePath">
     </div>
 </div>
 <div class="row">
     <div class="col-sm-12">
-        <h1>Recipe Name</h1>
+        <h1>{{ recipe.name }}</h1>
     </div>
 </div>
 <div class="row">
@@ -27,7 +27,7 @@
 </div>
 <div class="row">
     <div class="col-sm-12">
-        Description        
+        {{ recipe.description }}
     </div>
 </div>
 <div class="row">
