--- a/src/app/shopping/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/shopping/recipes/recipe-list/recipe-list.component.html
@@ -1,29 +1,18 @@
 <div class="row">
     <div class="col-sm-12 ">
-        <button class="btn btn-success"
-         (click)="onNewRecipe()"
-        >New Recipe</button>
+        <button class="btn btn-success" (click)="onNewRecipe()">
+            New Recipe
+        </button>
     </div>
 </div>
 <hr>
 <div class="row">
     <div class="col-sm-12">
         <div class="list-group">
-            
-            <a href="#" class="list-group-item list-group-item-action d-flex justify-content-between align-items-start" aria-current="true"
-                *ngFor="let item of recipes;index as i">
-
-                <div class="me-auto">
-                    <div class="fw-bold">{{item.name}}</div>
-                    {{item.description}}
-                </div>
-                <img [src]="item.imagePath"
-                    class="img-fluid" 
-                    style="max-height: 50px;"
-                    [alt]="item.name">
-            </a>            
+            <app-recipe-item *ngFor="let item of recipes;index as i" 
+                [recipe]="item"
+                [recipeSelected]="onRecipeSelected(item)"
+                />               
         </div>
-
-        <app-recipe-item />
     </div>
 </div>
