feat(99): Added basic directive

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,6 +10,7 @@
                 <username-input />
                 <log-user-detail />
                 <app-databinding />
+                <odd-list />
             </div>
         </div>    
     </div>    
