--- a/src/app/previous-component/odd-list/odd-list.component.html
+++ b/src/app/previous-component/odd-list/odd-list.component.html
@@ -12,8 +12,29 @@
             <li class="list-group-item" *ngFor="let n of numberEven">
                 {{ n }}
             </li>
-        </div>        
+        </div>
+        <ng-template [ngIf]="!onlyOdd">
+            <div>
+                <li class="list-group-item" *ngFor="let n of numberEven">
+                    {{ n }}
+                </li>
+            </div>  
+        </ng-template>
+        <div *appUnless="onlyOdd">
+            <li class="list-group-item" *ngFor="let n of numberEven">
+                {{ n }}
+            </li>
+        </div>
     </ul>
     <p appBasicHighlight>Style using basic-directive</p>
-    <p appBetterHighlight>Style using better-directive</p>
+    <p [appBetterHighlight]="'red'" defaultColor="yellow">Style using better-directive</p>
+
+    <div [ngSwitch]="value">
+        <p *ngSwitchCase="5">Value is 5</p>
+        <p *ngSwitchCase="15">Value is 15</p>
+        <p *ngSwitchCase="25">Value is 25</p>
+        <p *ngSwitchCase="35">Value is 35</p>        
+        <p *ngSwitchDefault="">Value is 55 - DEFAULT        </p>
+    </div>
+
 </div>
