--- a/src/app/previous-component/account/app-accounts/app-accounts.component.html
+++ b/src/app/previous-component/account/app-accounts/app-accounts.component.html
@@ -1,12 +1,11 @@
 <div class="row">
     <div class="col-xs-12">
-        <app-new-account (accountAdded)="onAccountAdded($event)" />
+        <app-new-account />
         <hr>
         <app-detail-account 
             *ngFor="let account of accounts; let i = index"
             [account] = "account"
             [id] = "i"
-            (statusChanged)="onStatusChanged($event)"
         />
     </div>
 </div>
