feat(118): Fixed counter on assignment 5

--- a/src/app/assignment/5/list-user/list-user.component.html
+++ b/src/app/assignment/5/list-user/list-user.component.html
@@ -6,4 +6,6 @@
         <active-user-app></active-user-app>
         <inactive-user-app></inactive-user-app>
     </div>
+    <h5>Movements Active User {{ countActiveUser }}</h5>
+    <h5>Movements Inactive User {{ countInactiveUser }}</h5>
 </div>
