--- a/src/app/shopping/shopping-list/shopping-list.component.html
+++ b/src/app/shopping/shopping-list/shopping-list.component.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-xs-10">
-        <app-shopping-edit (addIngredient)="onAddIngredient($event)" (deleteIngredient)="onDeleteIngredient()"/>
+        <app-shopping-edit />
         <hr>
         <div class="list-group">    
             <a href="#" class="list-group-item list-group-item-action d-flex justify-content-between align-items-start" aria-current="true"
