feat(134): Added angular router and changed the ui to be more cohesive

--- a/src/app/assignment/5/active-user/active-user.component.html
+++ b/src/app/assignment/5/active-user/active-user.component.html
@@ -7,7 +7,7 @@
                 <p class="card-text">
                     {{ user }}
                 </p>
-                <a href="#" class="card-link cursor-pointer" (click)="setInactive(i)">Set 'inactive'</a>
+                <a routerLink="." class="card-link cursor-pointer" (click)="setInactive(i)">Set 'inactive'</a>
             </div>
         </div>
     </div>
