--- a/src/app/assignment/5/inactive-user/inactive-user.component.html
+++ b/src/app/assignment/5/inactive-user/inactive-user.component.html
@@ -7,7 +7,7 @@
                 <p class="card-text">
                     {{ user }}
                 </p>
-                <a href="#" class="card-link" (click)="setActive(i)">Set 'active'</a>
+                <a routerLink="." class="card-link" (click)="setActive(i)">Set 'active'</a>
             </div>
         </div>
     </div>
