--- a/src/app/shopping/shopping-list/shopping-list.component.html
+++ b/src/app/shopping/shopping-list/shopping-list.component.html
@@ -3,7 +3,7 @@
         <app-shopping-edit />
         <hr>
         <div class="list-group">    
-            <a href="#" class="list-group-item list-group-item-action d-flex justify-content-between align-items-start" aria-current="true"
+            <a class="list-group-item list-group-item-action d-flex justify-content-between align-items-start" aria-current="true"
                 *ngFor="let item of ingredients;index as i">
 
                 <div class="me-auto">
