--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,67 +1,27 @@
-<div class="container" ngbAccordion>
-    <div ngbAccordionItem [collapsed]="true">
-        <h1 ngbAccordionHeader>
-            <button ngbAccordionButton>Previous component</button>
-        </h1>
-        <div ngbAccordionCollapse>
-            <div>
-                <block-warning />
-                <block-success />
-                <username-input />
-                <log-user-detail />
-                <app-databinding />
-                <odd-list />
-                <app-accounts />
-            </div>
-        </div>    
-    </div>    
-    <div ngbAccordionItem>
-        <h1 ngbAccordionHeader>
-            <button ngbAccordionButton>Assignments</button>
-        </h1>
-        <div ngbAccordionCollapse>
-            <div class="container" ngbAccordion>
-                <div ngbAccordionItem>
-                    <h1 ngbAccordionHeader>
-                        <button ngbAccordionButton>Assignment 4</button>
-                    </h1>
-                    <div ngbAccordionCollapse>
-                        <div>                                
-                            <app-game-control (onTick)="onTick($event)"/>
-                            <ul class="list-group">
-                                <li class="list-group-item" *ngFor="let number of numbers">
-                                    <odd-number *ngIf="number % 2 !== 0">{{number}}</odd-number>
-                                    <even-number *ngIf="number % 2 === 0">{{number}}</even-number>
-                                </li>                    
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-                <div ngbAccordionItem>
-                    <h1 ngbAccordionHeader>
-                        <button ngbAccordionButton>Assignment 5</button>
-                    </h1>
-                    <div ngbAccordionCollapse>
-                        <div>                                
-                            <list-user-app></list-user-app>
-                        </div>
-                    </div>
-                </div>   
-            </div>         
-        </div>
-    </div>
-    <div ngbAccordionItem>
-        <h1 ngbAccordionHeader>
-            <button ngbAccordionButton>Shopping</button>
-        </h1>
-        <div ngbAccordionCollapse>
-            <div>       
-                <app-header (goToEvent)="showView($event)"/>         
-                <app-recipes *ngIf="displayView === 'recipes'" />                
-                <app-shopping-list *ngIf="displayView === 'shopping-list'"/>
-            </div>
-        </div>        
-    </div>
+<ul class="nav nav-tabs">
+    <li class="nav-item">
+        <a class="nav-link" aria-current="page" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}"
+            [routerLink]="['/']">
+            Home
+        </a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" routerLinkActive="active" [routerLink]="['/shopping']">
+            Shopping
+        </a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" routerLinkActive="active" [routerLink]="['/assignment']">
+            Assignment
+        </a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" routerLinkActive="active" [routerLink]="['/previous']">
+            Previous
+        </a>
+    </li>
+</ul>
+
+<div>
+    <router-outlet />
 </div>
-
-
