--- a/src/app/shopping/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/src/app/shopping/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -1,4 +1,4 @@
-<a href="#" class="list-group-item list-group-item-action d-flex justify-content-between align-items-start"
+<a class="list-group-item list-group-item-action d-flex justify-content-between align-items-start"
     aria-current="true" (click)="onClick()">
     <div class="me-auto">
         <div class="fw-bold">{{recipe.name}}</div>
