--- a/src/app/shopping/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/shopping/recipes/recipe-list/recipe-list.component.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-sm-12 ">
-        <button class="btn btn-success" (click)="onNewRecipe()">
+        <button class="btn btn-success" (click)="onNewRecipe()" test>
             New Recipe
         </button>
     </div>
@@ -10,8 +10,8 @@
     <div class="col-sm-12">
         <div class="list-group">
             <app-recipe-item *ngFor="let item of recipes;index as i" 
-                [recipe]="item"                
-                />               
+                [recipe]="item"               
+            />               
         </div>
     </div>
 </div>
