--- a/src/app/shopping/recipes/recipes.component.html
+++ b/src/app/shopping/recipes/recipes.component.html
@@ -3,9 +3,6 @@
         <app-recipe-list />
     </div>
     <div class="col-md-7">
-        <app-recipe-detail *ngIf="recipeSelected; else noRecipeSelected"
-            [recipe]="recipeSelected"
-        />
-        <ng-template #noRecipeSelected>Please select a recipe</ng-template>
+        <router-outlet />
     </div>
 </div>
