--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <ul class="nav nav-tabs">
     <li class="nav-item">
-        <a class="nav-link" aria-current="page" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}"
+        <a class="nav-link" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}"
             [routerLink]="['/']">
             Home
         </a>
