--- a/src/app/shopping/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/src/app/shopping/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -1,5 +1,9 @@
-<a class="list-group-item list-group-item-action d-flex justify-content-between align-items-start"
-    aria-current="true" (click)="onClick()">
+<a class="list-group-item list-group-item-action d-flex justify-content-between align-items-start recipe-pointer"
+    aria-current="true" 
+    (click)="onClick()"
+    routerLinkActive="active"     
+    [routerLink]="[recipe.id]"
+    >
     <div class="me-auto">
         <div class="fw-bold">{{recipe.name}}</div>
         {{recipe.description}}
